# c_specx

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  script.py  test.c
.github/workflows/: ci.yml  release.yml
cmake/: CompileConfig.cmake  CompilerFlags.cmake  Options.cmake  Packaging.cmake  Sanitizers.cmake
include/: c_specx.h  c_specx_concurrency.h  c_specx_core.h  c_specx_dev.h  c_specx_ds.h  c_specx_intf.h  c_specx_memory.h  c_specx_net.h
include/c_specx/concurrency/: gr_lock.h  latch.h  periodic_task.h  spx_latch.h
include/c_specx/core/: checksums.h  filenames.h  hashing.h  macros.h  math.h  max_capture.h  numbers.h  random.h
include/c_specx/dev/: assert.h  bounds.h  data_validator.h  error.h  signatures.h  stdtypes.h  system.h  testing.h
include/c_specx/ds/: block_array.h  cbuffer.h  data_writer.h  dbl_buffer.h  ext_array.h  hash_table.h  ht_models.h  llist.h  robin_hood_ht.h  robin_hood_manual_ht.h  stream.h  stride.h  string.h
include/c_specx/intf/: logging.h  os.h
include/c_specx/intf/os/: compiler.h  file_system.h  memory.h  socket.h  threading.h  time.h
include/c_specx/memory/: alloc.h  bytes.h  chunk_alloc.h  deserializer.h  lalloc.h  malloc_plan.h  serializer.h  slab_alloc.h
include/c_specx/net/: client.h  echo_server.h  polling_server.h
scripts/: format.py  gen_tests.py
src/: CMakeLists.txt
src/concurrency/: gr_lock.c  latch.c  periodic_task.c
src/core/: checksums.c  filenames.c  hashing.c  math.c  numbers.c  random.c
src/dev/: data_validator.c  error.c
src/ds/: block_array.c  cbuffer.c  dbl_buffer.c  ext_array.c  hash_table.c  llist.c  stream.c  stride.c  string.c
src/intf/: logging.c
src/intf/os/: memory.c
src/intf/os_posix/: cond.c  file.c  mutex.c  rwlock.c  semaphore.c  socket.c  thread.c  timer.c
src/intf/os_windows/: cond.c  file.c  mutex.c  rwlock.c  semaphore.c  socket.c  thread.c  timer.c
src/memory/: alloc.c  chunk_alloc.c  deserializer.c  lalloc.c  malloc_plan.c  serializer.c  slab_alloc.c
src/net/: client.c  echo_server.c  polling_server.c
src/tests/: core_extra_tests.c  robin_hood_ht_tests.c  testing.c
